src/unit_tests/TypeChecker/success/let_self_type.cl
class Main { main() : Int {1}; };

class A {
    fun() : Int {
        {
            let x : SELF_TYPE in 5;
            1;
        }
    };
};